# EduCoder_ComputerSysDesign

./: README.md  start.sh
resource/STM32ADTrans/: .mxproject  Makefile  build.sh  platformio.ini  test.bat
resource/STM32Buzzr/: .mxproject  Makefile  stm32f103rbt6-fw.ioc
resource/STM32COMRecev/: .gitignore  .mxproject  Makefile  README.md  install_dev_env.sh  platformio.ini  remove_answer.py  stm32f103rbt6-fw.ioc
resource/STM32COMRecev/MDK-ARM/: stm32f103rbt6-fw.uvoptx  stm32f103rbt6-fw.uvprojx
resource/STM32Call/: .mxproject  Makefile  oled_simer.py  platformio.ini  stm32f103rbt6-fw.ioc
resource/STM32Call/Platformio/: platformio.ini
resource/STM32Call/Sim/cpp/: CMakeLists.txt
resource/STM32Call/Sim/cpp/main/: CMakeLists.txt  main.cpp  oled.h  oledfont.h
resource/STM32DHT11/DHT11/: .cproject  .mxproject  DHT11.ioc
resource/STM32LCD/PRO/: .cproject  .gitignore  .mxproject  PRO.ioc
resource/STM32LDR/: stm32f103rbt6-fw.ioc
resource/STM32LED/: build.sh  stm32f103rbt6-fw.ioc
resource/STM32Lamp/RadarTest/: .cproject  .project
resource/STM32Lamp/lamp/: .cproject  .project  lamp.ioc
resource/STM32Motor/: Makefile  stm32f103rbt6-fw.ioc
resource/STM32Timer/: .mxproject  Makefile  platformio.ini  stm32f103rbt6-fw.ioc
resource/force/: custom_output.py  custom_output.sh
scripts/: STM32BLE.sh  STM32Buz.sh  STM32COMAD.sh  STM32COMRec.sh  STM32COMSend.sh  STM32Call.sh  STM32DHT11.sh  STM32LCD.sh  STM32LDR.sh  STM32LED.sh  STM32Lamp-1.sh  STM32Lamp-2.sh  STM32Lamp-3.sh  STM32Motor.sh  STM32Temp-1.sh  STM32Temp-2.sh  STM32Timer.sh  download.sh
(+97 files in other folders)
